<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginActivity"
    android:background="@color/colorPrimary"
    android:padding="12dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        style="@style/TextStyle"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_to_enter_absentapp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        style="@style/TextStyle"/>


    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:paddingStart="24dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingEnd="24dp"
        android:hint="@string/email"
        android:textSize="14sp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/white_shape"
        android:fontFamily="@font/poppins"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@drawable/white_shape"
        android:hint="@string/password"
        android:textSize="14sp"
        android:elevation="1dp"
        android:paddingStart="24dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingEnd="24dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:inputType="textPassword"
        android:fontFamily="@font/poppins"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAllCaps="false"
        android:layout_marginTop="24dp"
        style="@style/TextStyle"
        android:textColor="@color/white"
        android:background="@drawable/orange_shape"/>

</LinearLayout>