<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <View
            android:id="@+id/back_blue"
            android:layout_width="match_parent"
            android:layout_height="226dp"
            android:background="@drawable/blue_rounded_bottom_back"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/absensi"
            android:textSize="18sp"
            style="@style/TextStyle"
            android:layout_marginTop="28dp"
            android:layout_marginStart="24dp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:drawableStart="@drawable/check"
            android:drawablePadding="8dp"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:cardCornerRadius="64dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/back_blue"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/undraw_male_avatar"
                android:adjustViewBounds="true"/>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/back_blue"
            app:layout_constraintStart_toEndOf="@id/card_image"
            android:layout_marginStart="24dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_user"
                style="@style/TextStyle"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_user_info"
                style="@style/TextStyle"
                android:textSize="14sp"
                android:textColor="@color/white"/>

        </LinearLayout>



        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="226dp"
            android:orientation="horizontal"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_main_selection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/gl1"
            app:layout_constraintBottom_toBottomOf="@id/gl1"
            app:cardCornerRadius="24dp"
            app:cardElevation="6dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="18dp"
                android:paddingBottom="18dp">

                <TextView
                    android:id="@+id/txt_log_absent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_absensi"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/gl2"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/TextStyle"
                    android:textSize="16sp"/>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gl2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5"/>

                <TextView
                    android:id="@+id/txt_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/gl2"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/TextStyle"
                    android:textSize="16sp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="24dp"
            app:layout_constraintTop_toBottomOf="@id/card_main_selection"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>